# toybox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: claude-auth.md  frontend-ui.md
.claude/skills/add-parent-feature-flag/: SKILL.md
.claude/skills/uat-ui/: SKILL.md
.claude/task-state/: current.md
.github/workflows/: frontend-tests.yml  linux-tests.yml
data/elements/: _credits.md  _distractors_credits.md  _distractors_review.md  distractors.json  elements.json
data/elements/investigation_of_fun_facts/: SUMMARY.md  elements_001-020.md  elements_021-040.md  elements_041-060.md  elements_061-080.md  elements_081-100.md  elements_101-118.md  (+6 more)
data/jokes/: jokes.json
data/songs/: _credits.md  manifest.json
docs/skill-iterate-runs/: 2026-05-31.md
documentation/: child-ipad-pwa-plan.md  e3-backend-carveout-plan.md  eval-fixtures.md  master-plan.md  phase-e-plan.md  phase-k-plan.md  phase-l-plan.md  phase-m-plan.md  phase-n-plan.md  phase-o-plan.md  phase-p-plan.md  phase-q-plan.md  phase-r-plan.md  phase-s-plan.md  phase-t-plan.md  phase-u-plan.md  phase-v-plan.md  plan.md  play-queue-plan.md  sonnet-window-revisit-findings.md  sonnet-window-revisit-plan.md  toy-action-sprites-plan.md
documentation/operator/: image-gen-runtime.md  ipad-setup.md  local-runtime.md  recovery.md
documentation/plan/: activity-loop.md  api.md  appendix.md  architecture.md  data-model.md  how-to-run.md  phase-a.md  phase-b.md  phase-c.md  phase-d-uat-m2.5.md  phase-d.md  phase-e.md  phase-f-5-sprite-cartoon-redo.md  phase-f-toy-action-sprites.md  phase-g-branching-gameplay.md  phase-h-parent-ux-revamp.md  phase-i-transcript-retention.md  phase-ipad-kiosk.md  phase-w-plan.md  phase-x-room-import-plan.md  phase-y-scene-backdrops-plan.md  phase-z-persona-voices-plan.md  risks.md  runtime.md
documentation/runs/: 2026-05-06-phase-f-8gb-feasibility.md  2026-05-07-toy-action-sprites-smoke.md  2026-05-08-audio-pipeline-smoke.md  2026-05-08-sprite-pipeline-alternatives.md  2026-05-09-phase-ipad-kiosk-uat.md  2026-05-09-toy-action-sprites-cartoon-smoke.md  2026-05-09-toy-action-sprites-cartoon-soak.md  2026-05-10-phase-g-uat.md  2026-05-10-phase-h-uat.md  2026-05-10-template-soak.md  2026-05-11-phase-i-uat.md  2026-05-16-phase-k-uat.md  2026-05-17-play-queue-j11-j12.md  2026-05-18-phase-m-uat.md  2026-05-18-phase-n-uat.md  2026-06-23-phase-y-uat.md  2026-06-23-uat-backlog-triage.md  2026-06-23-uat-ui-vision-pass.md  2026-06-30-go-public.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/data/: toybox.db
frontend/playwright/: child.spec.ts  parent-toy-action-grid.spec.ts  parent.spec.ts  smoke.spec.ts  uat-visual-kiosk.spec.ts  uat-visual-parent.spec.ts
frontend/public/: manifest.webmanifest  speech-test.html
frontend/scripts/: generate-icons.mjs
frontend/src/: main.tsx
scripts/: batch_animate.py  batch_scenes.py  batch_tts_audition.py  compare_animate.py  f5_compute_manifest.py  f5_download_cartoon_checkpoint.py  f5_download_ip_adapter.py  f5_download_lcm.py  f5_download_sd15.py  f5_generate_templates.py  f5_load_smoke.py  gen_smoke_wav.py  generate_conflict_resolution_templates.py  generate_distractor_corpus.py  generate_element_joke_corpus.py  generate_element_microgames.py  generate_element_song_corpus.py  generate_element_song_manifest.py  generate_element_sprites.py  generate_family_pretend_templates.py  generate_feelings_naming_templates.py  generate_friendship_repair_templates.py  generate_meet_element_templates.py  generate_persona_avatars.py  generate_perspective_taking_templates.py  generate_shrink_journey_templates.py  generate_song_corpus.py  image_gen_setup.py  launch-toybox.cmd  launch-toybox.ps1  port_cleanup.cmd  port_cleanup.ps1
scripts/archive/: README.md
scripts/uat/: bridge_claude_creds.py  generate_m2_5_fixtures.py  mint_child_token.py  mint_parent_token.py  ws_inspect.py
src/toybox/: __init__.py  app.py  main.py
tests/e2e/: __init__.py  test_smoke_pipeline.py
tests/fixtures/: lazy_insert.py
tests/integration/: conftest.py  test_active_surfaces.py  test_activities_advance.py  test_activities_propose_action_slot.py  test_activities_qa_grading.py  test_activities_question.py  test_activities_recast.py  test_activity_lifecycle.py  test_activity_polish.py  test_adventure_engine.py  test_ai_client.py  test_app_startup_image_gen_probe.py  test_approve_animations.py  test_auth.py  test_banned_themes_settings_api.py  test_batch_animate.py  test_boss_fight_engine.py  test_branching_e2e.py  test_breaker.py  test_breaker_429_escalation.py  test_capability_composition.py  test_capability_reasons.py  test_catalog_api.py  test_children_api.py  test_claude_output_invalid.py  test_concurrent_writes.py  test_dotenv_at_main_startup.py  test_element_id_wire_shape.py  test_element_sprite_static_mount.py  test_embedded_endings_surfaces.py  test_escalation_modes.py  test_escalation_real_content.py  test_eval_cli.py  test_eval_dump_sft_export.py  test_g2_lazy_insertion.py  test_game_complexity_api.py  test_game_linearity_api.py  test_generator_action_slot.py  test_generator_feedback.py  test_generator_real_content.py  (+64 more)
tests/unit/: test_activity_step_action_slot.py  test_bind_guard.py  test_children_models.py  test_content_resolver.py  test_distractor_corpus.py  test_element_corpus.py  test_errors.py  test_gen_error_codes_ts.py  test_gen_placeholder_avatar.py  test_generate_distractor_corpus.py  test_health.py  test_house_vision.py  test_joke_corpus.py  test_metrics_snapshot.py  test_persona_models.py  test_photo_fetch.py  test_pin.py  test_pin_rate_limit.py  test_reward_resolver.py  test_reward_resolver_q5.py  test_rubric.py  test_slots.py  test_slugs.py  test_song_corpus.py  test_static_mime.py  test_storage_images.py  test_themes.py  test_throttle.py  test_toy_vision.py  test_types_ts_voice_profile.py
tools/: README.md  gen_error_codes_ts.py  gen_placeholder_avatar.py  gen_types_ts.py  spike_pydantic2ts.py
(+555 files in other folders)
