[project]
name = "toybox"
version = "0.1.0"
description = "AI assistant for play with children — passive-listening home device."
requires-python = "~=3.12.0"
dependencies = [
    "fastapi>=0.110",
    "jsonschema>=4.21",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-to-typescript>=2.0",
    "python-slugify>=8.0",
    "sounddevice>=0.5.5",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toybox"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sounddevice", "onnxruntime"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
