[project]
name = "toybox"
version = "0.1.0"
description = "AI assistant for play with children — passive-listening home device."
requires-python = "~=3.12.0"
dependencies = [
    "argon2-cffi>=23.1",
    "fastapi>=0.110",
    "jsonschema>=4.21",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-to-typescript>=2.0",
    "python-slugify>=8.0",
    "sounddevice>=0.5.5",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "faster-whisper>=1.2.1",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-jsonschema>=4.21",
    "python-levenshtein>=0.27.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toybox"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sounddevice", "onnxruntime", "faster_whisper", "Levenshtein", "playwright", "playwright.async_api", "PIL", "PIL.Image"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Slow tests (synthetic-audio E2E in tests/e2e/test_smoke_pipeline.py)
# are marked ``@pytest.mark.slow`` and self-skip when artifacts are
# missing, so a default ``uv run pytest`` collects them but skips the
# heavy work. Invocation matrix:
#   - ``uv run pytest``                           -> all tests; slow self-skips if no artifacts
#   - ``uv run pytest -m "not slow"``             -> fast subset only
#   - ``uv run pytest -m slow tests/e2e/...``     -> smoke only (orchestrator/CI)
# An ``addopts = "-m 'not slow'"`` setting was removed in 14b iter-3:
# it collided with explicit ``-m slow`` on the CLI (pytest applies
# addopts first, then CLI; behaviour depended on the pytest version).
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
